* minor layout changes by Darius Blaszijk
 SVN 8395@trunk

--- a/ide/lazdocfrm.lfm
+++ b/ide/lazdocfrm.lfm
@@ -1,5 +1,4 @@
 object LazDocForm: TLazDocForm
-  ActiveControl = ExampleTabSheet
   BorderStyle = bsSizeToolWin
   Caption = 'LazDoc editor'
   ClientHeight = 117
@@ -9,15 +8,14 @@ object LazDocForm: TLazDocForm
   PixelsPerInch = 96
   HorzScrollBar.Page = 752
   VertScrollBar.Page = 116
-  Left = 260
+  Left = 390
   Height = 117
-  Top = 584
+  Top = 624
   Width = 753
   object PageControl: TPageControl
-    ActivePage = SeeAlsoTabSheet
+    ActivePage = ErrorsTabSheet
     Align = alClient
-    BorderSpacing.OnChange = nil
-    TabIndex = 3
+    TabIndex = 2
     TabOrder = 0
     TabPosition = tpBottom
     Left = 17
@@ -31,6 +29,7 @@ object LazDocForm: TLazDocForm
       Width = 728
       object ShortEdit: TEdit
         Align = alTop
+        BorderSpacing.OnChange = nil
         BorderSpacing.Right = 2
         OnChange = DocumentationTagChange
         TabOrder = 0
@@ -47,7 +46,6 @@ object LazDocForm: TLazDocForm
       Width = 728
       object DescrMemo: TMemo
         Align = alClient
-        BorderSpacing.OnChange = nil
         BorderSpacing.Right = 2
         BorderSpacing.Bottom = 4
         Lines.Strings = (
@@ -67,6 +65,7 @@ object LazDocForm: TLazDocForm
       Width = 728
       object ErrorsMemo: TMemo
         Align = alClient
+        BorderSpacing.OnChange = nil
         BorderSpacing.Right = 2
         BorderSpacing.Bottom = 4
         Lines.Strings = (
@@ -87,6 +86,7 @@ object LazDocForm: TLazDocForm
       object LinkListBox: TListBox
         Align = alBottom
         Anchors = [akTop, akLeft, akRight, akBottom]
+        BorderSpacing.OnChange = nil
         BorderSpacing.Right = 2
         BorderSpacing.Bottom = 4
         OnClick = LinkListBoxClick
@@ -98,7 +98,9 @@ object LazDocForm: TLazDocForm
       object AddLinkButton: TButton
         Anchors = [akTop, akRight]
         AutoSize = True
+        BorderSpacing.OnChange = nil
         BorderSpacing.Right = 6
+        BorderSpacing.InnerBorder = 2
         Caption = 'AddLinkButton'
         OnClick = AddLinkButtonClick
         TabOrder = 1
@@ -110,6 +112,8 @@ object LazDocForm: TLazDocForm
       object DeleteLinkButton: TButton
         Anchors = [akTop, akRight]
         AutoSize = True
+        BorderSpacing.OnChange = nil
+        BorderSpacing.InnerBorder = 2
         Caption = 'DeleteLinkButton'
         OnClick = DeleteLinkButtonClick
         TabOrder = 2
@@ -118,6 +122,7 @@ object LazDocForm: TLazDocForm
         Width = 75
       end
       object LinkTextEdit: TEdit
+        BorderSpacing.OnChange = nil
         OnChange = LinkChange
         TabOrder = 3
         Text = 'LinkTextEdit'
@@ -127,7 +132,6 @@ object LazDocForm: TLazDocForm
         Width = 328
       end
       object LinkIdComboBox: TComboBox
-        BorderSpacing.OnChange = nil
         MaxLength = 0
         OnChange = LinkChange
         TabOrder = 4
@@ -145,6 +149,7 @@ object LazDocForm: TLazDocForm
       Width = 728
       object ExampleEdit: TEdit
         Align = alTop
+        BorderSpacing.OnChange = nil
         BorderSpacing.Right = 2
         OnChange = DocumentationTagChange
         TabOrder = 0
@@ -155,6 +160,8 @@ object LazDocForm: TLazDocForm
       object BrowseExampleButton: TButton
         Anchors = [akTop, akRight]
         AutoSize = True
+        BorderSpacing.OnChange = nil
+        BorderSpacing.InnerBorder = 2
         Caption = 'BrowseExampleButton'
         OnClick = BrowseExampleButtonClick
         TabOrder = 1
@@ -167,6 +174,7 @@ object LazDocForm: TLazDocForm
   end
   object Panel1: TPanel
     Align = alLeft
+    BorderSpacing.OnChange = nil
     BevelOuter = bvNone
     ClientHeight = 117
     ClientWidth = 17
@@ -178,37 +186,22 @@ object LazDocForm: TLazDocForm
     Width = 17
     object BoldFormatButton: TSpeedButton
       Align = alTop
+      BorderSpacing.OnChange = nil
       Glyph.Data = {
-        AA030000424D9903000000000000360000002800000011000000110000000100
-        1800000000002101000064000000640000000000000000000000DEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEF00000000000000000000
-        0000000000000000000000000000DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEF000000000000000000DEEFEFDEEFEF00000000
-        0000000000DEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EF000000000000000000DEEFEFDEEFEF000000000000000000DEEFEFDEEFEFDE
-        EFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000000000DEEF
-        EFDEEFEF000000000000000000DEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEF000000000000000000000000000000000000000000DEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000
-        000000000000DEEFEFDEEFEF000000000000000000DEEFEFDEEFEFDEEFEFDEEF
-        EF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000000000DEEFEFDEEFEF
-        000000000000000000DEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEF000000000000000000DEEFEFDEEFEF000000000000000000DEEFEF
-        DEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEF00000000000000000000
-        0000000000000000000000000000DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEF00
+        B20100002F2A2058504D202A2F0A7374617469632063686172202A6772617068
+        69635B5D203D207B0A22313720313720322031222C0A222E2063204E6F6E6522
+        2C0A222C20632023303030303030222C0A222E2E2E2E2E2E2E2E2E2E2E2E2E2E
+        2E2E2E222C0A222E2E2E2E2E2E2E2E2E2E2E2E2E2E2E2E2E222C0A222E2E2E2E
+        2E2E2E2E2E2E2E2E2E2E2E2E2E222C0A222E2E2E2E2E2E2E2E2E2E2E2E2E2E2E
+        2E2E222C0A222E2E2E2E2C2C2C2C2C2C2C2C2E2E2E2E2E222C0A222E2E2E2E2E
+        2C2C2C2E2E2C2C2C2E2E2E2E222C0A222E2E2E2E2E2C2C2C2E2E2C2C2C2E2E2E
+        2E222C0A222E2E2E2E2E2C2C2C2E2E2C2C2C2E2E2E2E222C0A222E2E2E2E2E2C
+        2C2C2C2C2C2C2E2E2E2E2E222C0A222E2E2E2E2E2C2C2C2E2E2C2C2C2E2E2E2E
+        222C0A222E2E2E2E2E2C2C2C2E2E2C2C2C2E2E2E2E222C0A222E2E2E2E2E2C2C
+        2C2E2E2C2C2C2E2E2E2E222C0A222E2E2E2E2C2C2C2C2C2C2C2C2E2E2E2E2E22
+        2C0A222E2E2E2E2E2E2E2E2E2E2E2E2E2E2E2E2E222C0A222E2E2E2E2E2E2E2E
+        2E2E2E2E2E2E2E2E2E222C0A222E2E2E2E2E2E2E2E2E2E2E2E2E2E2E2E2E222C
+        0A222E2E2E2E2E2E2E2E2E2E2E2E2E2E2E2E2E227D0A
       }
       NumGlyphs = 0
       OnClick = FormatButtonClick
@@ -217,37 +210,23 @@ object LazDocForm: TLazDocForm
     end
     object ItalicFormatButton: TSpeedButton
       Align = alTop
+      BorderSpacing.OnChange = nil
       Glyph.Data = {
-        AA030000424D9903000000000000360000002800000011000000110000000100
-        1800000000002101000064000000640000000000000000000000DEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEF
-        EFDEEFEFDEEFEFDEEFEF000000000000000000000000000000000000DEEFEFDE
-        EFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEF000000000000AF9696DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFAF96960000000000
-        00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000AF9696DEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
-        DEEFEFAF9696000000000000DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000
-        AF9696DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEFDEEFEFDEEFEFDEEFEFAF9696000000000000DEEFEFDEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEF000000000000AF9696DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00000000000000000000
-        0000000000DEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEF00
+        C10100002F2A2058504D202A2F0A7374617469632063686172202A6772617068
+        69635B5D203D207B0A22313720313720332031222C0A222E2063204E6F6E6522
+        2C0A222C20632023303030303030222C0A222D20632023393639364146222C0A
+        222E2E2E2E2E2E2E2E2E2E2E2E2E2E2E2E2E222C0A222E2E2E2E2E2E2E2E2E2E
+        2E2E2E2E2E2E2E222C0A222E2E2E2E2E2E2E2E2E2E2E2E2E2E2E2E2E222C0A22
+        2E2E2E2E2E2E2E2E2C2C2C2C2C2E2E2E2E222C0A222E2E2E2E2E2E2E2E2E2C2C
+        2D2E2E2E2E2E222C0A222E2E2E2E2E2E2E2E2D2C2C2E2E2E2E2E2E222C0A222E
+        2E2E2E2E2E2E2E2C2C2D2E2E2E2E2E2E222C0A222E2E2E2E2E2E2E2D2C2C2E2E
+        2E2E2E2E2E222C0A222E2E2E2E2E2E2E2C2C2D2E2E2E2E2E2E2E222C0A222E2E
+        2E2E2E2E2D2C2C2E2E2E2E2E2E2E2E222C0A222E2E2E2E2E2E2C2C2D2E2E2E2E
+        2E2E2E2E222C0A222E2E2E2E2C2C2C2C2C2C2E2E2E2E2E2E2E222C0A222E2E2E
+        2E2E2E2E2E2E2E2E2E2E2E2E2E2E222C0A222E2E2E2E2E2E2E2E2E2E2E2E2E2E
+        2E2E2E222C0A222E2E2E2E2E2E2E2E2E2E2E2E2E2E2E2E2E222C0A222E2E2E2E
+        2E2E2E2E2E2E2E2E2E2E2E2E2E222C0A222E2E2E2E2E2E2E2E2E2E2E2E2E2E2E
+        2E2E227D0A
       }
       NumGlyphs = 0
       OnClick = FormatButtonClick
@@ -258,37 +237,23 @@ object LazDocForm: TLazDocForm
     end
     object UnderlineFormatButton: TSpeedButton
       Align = alTop
+      BorderSpacing.OnChange = nil
       Glyph.Data = {
-        AA030000424D9903000000000000360000002800000011000000110000000100
-        1800000000002101000064000000640000000000000000000000DEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDE
-        EFEF000000000000000000000000000000000000000000000000000000DEEFEF
-        DEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000000000000000000000DE
-        EFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EF000000000000848484DEEFEF848484000000000000DEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000DEEFEFDEEF
-        EFDEEFEF000000000000DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEF000000000000DEEFEFDEEFEFDEEFEF000000000000DEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000
-        000000DEEFEFDEEFEFDEEFEF000000000000DEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000DEEFEFDEEFEFDEEFEF
-        000000000000DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEF000000000000DEEFEFDEEFEFDEEFEF000000000000DEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF000000000000DE
-        EFEFDEEFEFDEEFEF000000000000DEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEF
-        EFDEEFEFDEEFEFDEEFEF000000000000000000000000DEEFEF00000000000000
-        0000000000DEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDE
-        EFEFDEEFEF00DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEF00DEEFEFDEEFEF
-        DEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEFEFDEEF
-        EFDEEFEFDEEFEFDEEFEFDEEFEF00
+        C10100002F2A2058504D202A2F0A7374617469632063686172202A6772617068
+        69635B5D203D207B0A22313720313720332031222C0A222E2063204E6F6E6522
+        2C0A222C20632023303030303030222C0A222D20632023383438343834222C0A
+        222E2E2E2E2E2E2E2E2E2E2E2E2E2E2E2E2E222C0A222E2E2E2E2E2E2E2E2E2E
+        2E2E2E2E2E2E2E222C0A222E2E2E2E2E2E2E2E2E2E2E2E2E2E2E2E2E222C0A22
+        2E2E2E2E2C2C2C2C2E2C2C2C2C2E2E2E2E222C0A222E2E2E2E2E2C2C2E2E2E2C
+        2C2E2E2E2E2E222C0A222E2E2E2E2E2C2C2E2E2E2C2C2E2E2E2E2E222C0A222E
+        2E2E2E2E2C2C2E2E2E2C2C2E2E2E2E2E222C0A222E2E2E2E2E2C2C2E2E2E2C2C
+        2E2E2E2E2E222C0A222E2E2E2E2E2C2C2E2E2E2C2C2E2E2E2E2E222C0A222E2E
+        2E2E2E2C2C2E2E2E2C2C2E2E2E2E2E222C0A222E2E2E2E2E2C2C2D2E2D2C2C2E
+        2E2E2E2E222C0A222E2E2E2E2E2E2C2C2C2C2C2E2E2E2E2E2E222C0A222E2E2E
+        2E2E2E2E2E2E2E2E2E2E2E2E2E2E222C0A222E2E2E2E2C2C2C2C2C2C2C2C2C2E
+        2E2E2E222C0A222E2E2E2E2E2E2E2E2E2E2E2E2E2E2E2E2E222C0A222E2E2E2E
+        2E2E2E2E2E2E2E2E2E2E2E2E2E222C0A222E2E2E2E2E2E2E2E2E2E2E2E2E2E2E
+        2E2E227D0A
       }
       NumGlyphs = 0
       OnClick = FormatButtonClick
@@ -299,7 +264,6 @@ object LazDocForm: TLazDocForm
     end
     object InsertCodeTagButton: TSpeedButton
       Align = alTop
-      BorderSpacing.OnChange = nil
       Glyph.Data = {
         F90900002F2A2058504D202A2F0D0A7374617469632063686172202A20496E73
         657274436F64655461675F78706D5B5D203D207B0D0A22313720313520313132
@@ -391,7 +355,6 @@ object LazDocForm: TLazDocForm
     end
     object InsertRemarkButton: TSpeedButton
       Align = alTop
-      BorderSpacing.OnChange = nil
       Glyph.Data = {
         D60100002F2A2058504D202A2F0D0A7374617469632063686172202A20496E73
         65727452656D61726B5F78706D5B5D203D207B0D0A2231372031372032203122
@@ -418,7 +381,6 @@ object LazDocForm: TLazDocForm
     end
     object InsertVarTagButton: TSpeedButton
       Align = alTop
-      BorderSpacing.OnChange = nil
       Glyph.Data = {
         D70200002F2A2058504D202A2F0D0A7374617469632063686172202A20496E73
         6572745661725461675F78706D5B5D203D207B0D0A2231372031372031382031
