--- a/ide/newdialog.lfm
+++ b/ide/newdialog.lfm
@@ -1,10 +1,11 @@
 object NewOtherDialog: TNewOtherDialog
+  ActiveControl = ItemsTreeView
   BorderStyle = bsSizeToolWin
   Caption = 'NewOtherDialog'
   ClientHeight = 300
   ClientWidth = 400
   OnResize = FormResize
-  PixelsPerInch = 96
+  PixelsPerInch = 112
   Position = poScreenCenter
   HorzScrollBar.Page = 399
   VertScrollBar.Page = 299
@@ -13,8 +14,9 @@ object NewOtherDialog: TNewOtherDialog
   Top = 362
   Width = 400
   object ItemsTreeView: TTreeView
+    Anchors = [akTop, akLeft, akBottom]
     BorderSpacing.Around = 6
-    DefaultItemHeight = 15
+    DefaultItemHeight = 14
     TabOrder = 0
     OnClick = ItemsTreeViewClick
     OnDblClick = OkButtonClick
@@ -25,47 +27,49 @@ object NewOtherDialog: TNewOtherDialog
     Width = 178
   end
   object DescriptionGroupBox: TGroupBox
+    Anchors = [akTop, akLeft, akRight, akBottom]
     BorderSpacing.Around = 6
     Caption = 'DescriptionGroupBox'
-    ClientHeight = 232
-    ClientWidth = 196
-    ParentColor = True
+    ClientHeight = 233
+    ClientWidth = 200
     TabOrder = 1
     AnchorSideLeft.Control = ItemsTreeView
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
     Left = 190
     Height = 250
     Top = 6
-    Width = 200
+    Width = 204
     object DescriptionLabel: TLabel
       Align = alClient
       BorderSpacing.Around = 6
       Caption = 'DescriptionLabel'
       Color = clNone
+      ParentColor = False
       WordWrap = True
       Left = 6
-      Height = 220
+      Height = 221
       Top = 6
-      Width = 184
+      Width = 188
     end
   end
   object CancelButton: TButton
     Anchors = [akRight, akBottom]
     AutoSize = True
-    BorderSpacing.OnChange = nil
     BorderSpacing.Around = 6
     BorderSpacing.InnerBorder = 2
     Caption = 'CancelButton'
     ModalResult = 2
     TabOrder = 2
-    Left = 306
-    Height = 29
-    Top = 265
-    Width = 88
+    Left = 309
+    Height = 26
+    Top = 268
+    Width = 85
   end
   object OkButton: TButton
     Anchors = [akRight, akBottom]
     AutoSize = True
-    BorderSpacing.OnChange = nil
     BorderSpacing.Around = 6
     BorderSpacing.InnerBorder = 2
     Caption = 'OkButton'
@@ -73,9 +77,9 @@ object NewOtherDialog: TNewOtherDialog
     OnClick = OkButtonClick
     TabOrder = 3
     AnchorSideRight.Control = CancelButton
-    Left = 231
-    Height = 29
-    Top = 265
-    Width = 69
+    Left = 242
+    Height = 26
+    Top = 268
+    Width = 61
   end
 end
